--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/styles.css">
 </head>
+
 <body>
-   hello hello 
+    <div style="position: relative;">
+        <div style="position: absolute;transform: translate(-50%, 0%);top: 50%;left: 50%;max-width:100%;">
+            <a href="./Practice/">
+               
+                    <img src="https://icon-library.com/images/file-folder-icon-png/file-folder-icon-png-8.jpg"
+                    alt="folder icon"><br>
+            </a>
+            <P style="text-align: center;">HTML & CSS PRACTICE</P>
+            <a href="./assignments/"> <img
+                    src="https://icon-library.com/images/file-folder-icon-png/file-folder-icon-png-8.jpg"
+                    alt="folder icon"></a>
+                    <P style="text-align: center;">HTML & CSS ASSIGNMENTS BY SIR ISHAQ BOJHANI</P>
+        </div>
+    </div>
+
 </body>
+
 </html>
