--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML & CSS</title>
 </head>
 
 <body>
     <div style="position: relative;">
+        <P>HTML & CSS COURSE <br></P>
         <div style="position: absolute;transform: translate(-50%, 0%);top: 50%;left: 50%;max-width:100%;">
             <a href="./Practice/">
                
