--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div style="position: relative;">
-        <P>HTML & CSS COURSE <br></P>
+        <P style="text-align: center;color: brown;"> <b>HTML & CSS COURSE</b></P>
         <div style="position: absolute;transform: translate(-50%, 0%);top: 50%;left: 50%;max-width:100%;">
             <a href="./Practice/">
                
