--- a/assignments/index.html
+++ b/assignments/index.html
@@ -32,6 +32,10 @@
                 src="https://freesvg.org/img/blankYellowFolder.png"
                 alt="folder icon"></a>
         <P style="text-align: center;">ASSIGNMENT 4</P>
+        <a href="./Assignment5/index.html"> <img
+            src="https://freesvg.org/img/blankYellowFolder.png"
+            alt="folder icon"></a>
+    <P style="text-align: center;">ASSIGNMENT 5</P>
         </div>
     </div>
 </body>
