--- a/assignments/Assignment5/index.html
+++ b/assignments/Assignment5/index.html
@@ -40,7 +40,7 @@
                                 style="color: rgb(46, 139, 87);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
                                 style="color: rgb(46, 139, 87);font-size: 1.5vw;">Freelance</i></td>
                     </tr>
-                    <tr style="height: 9vw;">
+                    <tr>
                         <td style="font-size: 1vw;color: rgb(63, 73, 82);">Lorem ipsum dolor sit amet consectetur
                             adipisicing elit. Pariatur aliquid voluptas sed consectetur aut quo in et impedit unde magnam!
                             Ducimus, natus temporibus non qui molestias maxime nemo dolore, velit labore veritatis inventore
@@ -59,12 +59,20 @@
                         <td><img src="./icon2.jpg" alt="icon2" style="width: 4vw;max-width: 100%;"></td>
                     </tr>
                     <tr>
+                        <td style="color: white; font-size: 2vw;">development</td>
+                        <td style="color: white; font-size: 2vw;">SEO Optimization</td>
+                    </tr>
+                    <tr>
                         <td style="font-size: 1vw;color: rgb(63, 73, 82);">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Possimus ea ratione laborum <br> optio nesciunt hic tempora dolore magni veniam aperiam?</td>
                         <td style="font-size: 1vw;color: rgb(63, 73, 82);">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Possimus ea ratione laborum <br> optio nesciunt hic tempora dolore magni veniam aperiam?</td>
                     </tr>
-                    <tr style="height: 10vw;">
+                    <tr style="height: 7vw;">
                         <td><img src="./icon3.jpg" alt="icon3" style="width: 4vw;max-width: 100%;"></td>
                         <td><img src="./icon4.jpg" alt="icon4" style="width: 4vw;max-width: 100%;"></td>
+                    </tr>
+                    <tr>
+                        <td style="color: white; font-size: 2vw;">data base</td>
+                        <td style="color: white; font-size: 2vw;">data security</td>
                     </tr>
                     <tr>
                         <td style="font-size: 1vw;color: rgb(63, 73, 82);">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Possimus ea ratione laborum <br> optio nesciunt hic tempora dolore magni veniam aperiam?</td>
@@ -102,8 +110,8 @@
                             veritatis animi qui voluptatem porro exercitationem iste dolores sit labore. Reiciendis
                             exercitationem repellendus architecto corporis fugiat earum sunt nobis cupiditate dicta?</td>
                 </table>
-                <hr style="width: 65vw;">
-                <table style="padding: 2vw; max-width: 100%;">
+                <!-- <hr style="width: 65vw;"> -->
+                <table style="padding: 2vw;">
                     <tr>
                         <td style="color: white; font-size: 3.5vw;">my services</td>
                     </tr>
@@ -112,12 +120,20 @@
                         <td><img src="./icon2.jpg" alt="icon2" style="width: 4vw;max-width: 100%;"></td>
                     </tr>
                     <tr>
+                        <td style="color: white; font-size: 1.5vw;">development</td>
+                        <td style="color: white; font-size: 1.5vw;">SEO Optimization</td>
+                    </tr>
+                    <tr>
                         <td style="font-size: 1vw;color: rgb(63, 73, 82);">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Possimus ea ratione laborum <br> optio nesciunt hic tempora dolore magni veniam aperiam?</td>
                         <td style="font-size: 1vw;color: rgb(63, 73, 82);">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Possimus ea ratione laborum <br> optio nesciunt hic tempora dolore magni veniam aperiam?</td>
                     </tr>
                     <tr>
                         <td><img src="./icon3.jpg" alt="icon3" style="width: 4vw;max-width: 100%;"></td>
                         <td><img src="./icon4.jpg" alt="icon4" style="width: 4vw;max-width: 100%;"></td>
+                    </tr>
+                    <tr>
+                        <td style="color: white; font-size: 1.5vw;">data base</td>
+                        <td style="color: white; font-size: 1.5vw;">data security</td>
                     </tr>
                     <tr>
                         <td style="font-size: 1vw;color: rgb(63, 73, 82);">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Possimus ea ratione laborum <br> optio nesciunt hic tempora dolore magni veniam aperiam?</td>
