--- a/assignments/Assignment5/index.html
+++ b/assignments/Assignment5/index.html
@@ -90,7 +90,7 @@
             <div
                 style="max-width: 100%; background-color: rgb(26, 24, 24);border: rgb(26, 24, 24) solid;position: absolute;top: 53.25%;left: 65%;transform: translate(-50%,-50%);width: 69vw;height: 59vw;">
     
-                <table style="padding: 2vw; max-width: 100%;">
+                <table style="padding: 2vw; max-width: 100%; padding-top: 0%;padding-bottom: 1.5vw;" cellspacing="1vw">
                     <tr>
                         <td style="color: white; font-size: 5vw;">about me</td>
                     </tr>
@@ -110,8 +110,8 @@
                             veritatis animi qui voluptatem porro exercitationem iste dolores sit labore. Reiciendis
                             exercitationem repellendus architecto corporis fugiat earum sunt nobis cupiditate dicta?</td>
                 </table>
-                <!-- <hr style="width: 65vw;"> -->
-                <table style="padding: 2vw;">
+                <hr style="width: 65vw;border-top: 1px;border-left: 0px;border-right: 0px;color:rgb(63, 73, 82) ;">
+                <table style="padding: 2vw;padding-top: 0%;padding-bottom: 0;" cellspacing="1vw">
                     <tr>
                         <td style="color: white; font-size: 3.5vw;">my services</td>
                     </tr>
@@ -140,6 +140,7 @@
                         <td style="font-size: 1vw;color: rgb(63, 73, 82);">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Possimus ea ratione laborum <br> optio nesciunt hic tempora dolore magni veniam aperiam?</td>
                     </tr>
                 </table>
+                <hr style="width: 65vw;border-top: 1px;border-left: 0px;border-right: 0px;color:rgb(63, 73, 82) ;">
             </div>
         </div>
     </div>
