--- a/assignments/Assignment5/index.html
+++ b/assignments/Assignment5/index.html
@@ -35,9 +35,9 @@
                     </tr>
                     <tr>
                         <td> <i style="color: rgb(46, 139, 87);font-size: 1.5vw;">28 years &nbsp;</i> <span
-                                style="color: rgb(46, 139, 87);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
+                                style="color: rgb(142, 152, 160);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
                                 style="color: rgb(46, 139, 87); font-size: 1.5vw;">Lviv &nbsp;</i> <span
-                                style="color: rgb(46, 139, 87);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
+                                style="color: rgb(142, 152, 160);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
                                 style="color: rgb(46, 139, 87);font-size: 1.5vw;">Freelance</i></td>
                         </tr>
                     <tr>
@@ -93,13 +93,13 @@
     
                 <table style="padding: 2vw; max-width: 100%; padding-top: 0%;padding-bottom:0%;" cellspacing="0">
                     <tr>
-                        <td style="color: white; font-size: 5vw;">about me</td>
+                        <td style="color: white; font-size: 5vw; padding-bottom: 0%;">about me</td>
                     </tr>
                     <tr>
                         <td> <i style="color: rgb(46, 139, 87);font-size: 1.5vw;">28 years &nbsp;</i> <span
-                                style="color: rgb(46, 139, 87);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
+                                style="color: rgb(142, 152, 160);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
                                 style="color: rgb(46, 139, 87); font-size: 1.5vw;">Lviv &nbsp;</i> <span
-                                style="color: rgb(46, 139, 87);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
+                                style="color: rgb(142, 152, 160);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
                                 style="color: rgb(46, 139, 87);font-size: 1.5vw;">Freelance</i></td>
                     </tr>
                     <tr>
