--- a/assignments/Assignment5/index.html
+++ b/assignments/Assignment5/index.html
@@ -95,8 +95,8 @@
                     <tr>
                         <td style="color: white; font-size: 5vw; padding-bottom: 0%;">about me</td>
                     </tr>
-                    <tr>
-                        <td> <i style="color: rgb(46, 139, 87);font-size: 1.5vw;">28 years &nbsp;</i> <span
+                    <tr style="padding-top: 0%;">
+                        <td style="padding-top: 0%;"> <i style="color: rgb(46, 139, 87);font-size: 1.5vw;">28 years &nbsp;</i> <span
                                 style="color: rgb(142, 152, 160);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
                                 style="color: rgb(46, 139, 87); font-size: 1.5vw;">Lviv &nbsp;</i> <span
                                 style="color: rgb(142, 152, 160);font-size: 1.5vw;">&nbsp;/&nbsp;</span> <i
