--- a/index.html
+++ b/index.html
@@ -7,23 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML & CSS</title>
 </head>
-
+<style>
+    .main{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;     
+    }
+    body{
+        background-color: rgb(41, 39, 39);
+    }
+</style>
 <body>
-    <div style="position: relative;">
-        <P style="text-align: center;color: brown;"> <b>HTML & CSS COURSE</b></P>
-        <div style="position: absolute;transform: translate(-50%, 0%);top: 50%;left: 50%;max-width:100%;">
+    <P style="color: rgb(180, 107, 107);text-align: center;font-size: 3vw,;"> <b>HTML & CSS COURSE</b></P>
+    <div class="main" >
+        <div>
             <a href="./Practice/">
-               
-                    <img src="https://icon-library.com/images/file-folder-icon-png/file-folder-icon-png-8.jpg"
-                    alt="folder icon"><br>
+                <img src="https://icon-library.com/images/file-folder-icon-png/file-folder-icon-png-8.jpg"
+                    alt="folder icon" width="200px" height="200px"><br>
             </a>
-            <P style="text-align: center;">HTML & CSS PRACTICE</P>
+            <P style="text-align: center;color: honeydew;">HTML & CSS PRACTICE</P>
+        </div>
+        <div>
             <a href="./assignments/"> <img
                     src="https://icon-library.com/images/file-folder-icon-png/file-folder-icon-png-8.jpg"
-                    alt="folder icon"></a>
-                    <P style="text-align: center;">HTML & CSS ASSIGNMENTS BY SIR ISHAQ BOJHANI</P>
+                    alt="folder icon" width="200px" height="200px">
+                </a>
+            <P style="text-align: center; color: honeydew;">HTML & CSS ASSIGNMENTS</P>
         </div>
     </div>
+    <!-- style="position: absolute;transform: translate(-50%, 0%);top: 50%;left: 50%;max-width:100%;" -->
+    <!-- style="position: relative;" -->
 
 </body>
 
