--- a/Practice/my/index.html
+++ b/Practice/my/index.html
@@ -17,10 +17,10 @@
         </div>
         <div class="menue">
             <ul>
-                <li> <a href="" class="m">About Me</a></li>
-                <li> <a href="" class="m">My Resume</a></li>
-                <li> <a href="" class="m">My CV</a></li>
-                <li> <a href="#foot" class="m">Contact Me</a></li>
+                <li> <a href="" class="m"><span style="font-size: 1.5vw;">About Me</span> </a></li>
+                <li> <a href="" class="m"><span style="font-size: 1.5vw;">My Resume</span> </a></li>
+                <li> <a href="" class="m"><span style="font-size: 1.5vw;">My CV</span></a></li>
+                <li> <a href="#foot" class="m"><span style="font-size: 1.5vw;">Contact Me</span></a></li>
             </ul>
         </div>
     </div>
