--- a/Practice/my/index.html
+++ b/Practice/my/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <P>My Portfolio</P>
+            <a href="./index.html">My Portfolio</a>
         </div>
         <div class="menue">
             <ul>
@@ -25,6 +25,7 @@
         </div>
     </div>
     <div class="home">
+        <br><br>
         <div class="maintop">
             <div class="first-left">
                 <h1 style="color: rgb(255, 255, 255);font-size: 3vw;">Welcome to my <br> <span
@@ -37,36 +38,67 @@
                 </p>
             </div>
         </div>
-        
-    </div>
-
-    <div class="footer" id="foot">
-        <div class="left">
-            <p style="color: white;font-size: 2.5vw;">Contact Me</p>
-            <p style="color: white; font-size: 1.5vw;"><a href="mailto:saleemabdullah764@gmail.com"target="_blank"><i class="bi bi-envelope-fill"
-                        onmouseover="this.style.color='#FBBC05'"
-                        onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                        onmouseover="this.style.color='#FBBC05'"
-                        onmouseout="this.style.color=' #fff'">saleemabdullah764@gmail.com</span></a></p>
-            <p style="color: white;font-size: 1.5vw; "><a href="tel:+923092680015" target="_blank"><i class="bi bi-telephone-fill"
-                        onmouseover="this.style.color='#34A853'"
-                        onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                        onmouseover="this.style.color='#34A853'"
-                        onmouseout="this.style.color=' #fff'">+923092680015</span></a></p>
+        <p style="font-size: 3vw; color: rgb(255, 255, 255);text-align: center; font-weight: 700;">MY &nbsp;<Span
+                style="color: seagreen;"> WORK</Span></p>
+        <p style="font-size: 1.5vw; color: white;text-align: center;">HTML & CSS PRACTICE</p>
+        <div class="practice">
+            <div class="p1 pra"></div>
+            <div class="p2 pra"></div>
+            <div class="p3 pra"></div>
+            <div class="p4 pra"></div>
         </div>
-        <div class="right">
-            <ul>
-                <li style="color: white;font-size: 2.5vw;">Follow me :)</li><br>
-                <li><a href="https://www.instagram.com/abdullah.__.saleem" target="_blank"><i class="bi bi-instagram"
-                            style="color: white;font-size: 2.5vw;" onmouseover="this.style.color='#cd486b'"
-                            onmouseout="this.style.color=' #fff'"></i></a></li>
-                <li><a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook" style="color: white; font-size: 2.5vw;"
-                            onmouseover="this.style.color='#3b5998'" onmouseout="this.style.color=' #fff'"></i></a></li>
-                <li><a href="https://www.github.com/ABDULLAH-SALEEM" target="_blank"><i class="bi bi-github" style="color: white;font-size: 2.5vw;"
-                            onmouseover="this.style.color='#AD5C51'" onmouseout="this.style.color=' #fff'"></i></a></li>
-            </ul>
+        <hr
+            style="margin-top: 5vw; margin-bottom: 5vw;border-color: seagreen;border-left: 0;border-right: 0;border-top: 0;">
+        <p style="font-size: 1.5vw; color: white;text-align: center;">ASSIGNMENTS</p>
+        <div class="assignments">
+            <div class="a1 assi"></div>
+            <div class="a2 assi"></div>
+            <div class="a3 assi"></div>
+            <div class="a4 assi"></div>
+            <div class="a5 assi"></div>
         </div>
-    </div>
+        <hr
+            style="margin-top: 5vw; margin-bottom: 5vw;border-color: seagreen;border-left: 0;border-right: 0;border-top: 0;">
+        <p style="font-size: 1.5vw; color: white;text-align: center;">PROJECTS</p>
+        <div class="projects">
+            <div class="a1 assi"></div>
+            <div class="a2 assi"></div>
+            <div class="a3 assi"></div>
+            <div class="a4 assi"></div>
+            <div class="a5 assi"></div>
+        </div>
+        <hr
+            style="margin-top: 5vw; margin-bottom: 5vw;border-color: seagreen;border-left: 0;border-right: 0;border-top: 0;">
+        <div class="footer" id="foot">
+            <div class="left">
+                <p style="color: white;font-size: 2.5vw;">Contact Me</p>
+                <p style="color: white; font-size: 1.5vw;"><a href="mailto:saleemabdullah764@gmail.com"
+                        target="_blank"><i class="bi bi-envelope-fill" onmouseover="this.style.color='#FBBC05'"
+                            onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                            onmouseover="this.style.color='#FBBC05'"
+                            onmouseout="this.style.color=' #fff'">saleemabdullah764@gmail.com</span></a></p>
+                <p style="color: white;font-size: 1.5vw; "><a href="tel:+923092680015" target="_blank"><i
+                            class="bi bi-telephone-fill" onmouseover="this.style.color='#34A853'"
+                            onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                            onmouseover="this.style.color='#34A853'"
+                            onmouseout="this.style.color=' #fff'">+923092680015</span></a></p>
+            </div>
+            <div class="right">
+                <ul>
+                    <li style="color: white;font-size: 2.5vw;">Follow me :)</li><br>
+                    <li><a href="https://www.instagram.com/abdullah.__.saleem" target="_blank"><i
+                                class="bi bi-instagram" style="color: white;font-size: 2.5vw;"
+                                onmouseover="this.style.color='#cd486b'" onmouseout="this.style.color=' #fff'"></i></a>
+                    </li>
+                    <li><a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"
+                                style="color: white; font-size: 2.5vw;" onmouseover="this.style.color='#3b5998'"
+                                onmouseout="this.style.color=' #fff'"></i></a></li>
+                    <li><a href="https://www.github.com/ABDULLAH-SALEEM" target="_blank"><i class="bi bi-github"
+                                style="color: white;font-size: 2.5vw;" onmouseover="this.style.color='#AD5C51'"
+                                onmouseout="this.style.color=' #fff'"></i></a></li>
+                </ul>
+            </div>
+        </div>
 
 </body>
 
