--- a/Practice/my/index.html
+++ b/Practice/my/index.html
@@ -43,19 +43,32 @@
         <p style="font-size: 1.5vw; color: white;text-align: center;">HTML & CSS PRACTICE</p>
         <div class="practice">
             <div class="p1 pra"></div>
-            <div class="p2 pra"></div>
-            <div class="p3 pra"></div>
-            <div class="p4 pra"></div>
+            <div class="p2 pra"><a href="../Lesson 2/index.html" target="_blank"><img src="./l2.jpg" alt="" width="100%"
+                        height="100%"></a></div>
+            <div class="p3 pra"><a href="../Lesson 3/index.html" target="_blank"><img src="./l3.jpg" alt="" width="100%"
+                        height="100%"></a></div>
+            <div class="p4 pra"><a href="../Lesson 4/index.html" target="_blank"><img src="./l4.jpg" alt="" width="100%"
+                        height="100%"></a></div>
         </div>
         <hr
             style="margin-top: 5vw; margin-bottom: 5vw;border-color: seagreen;border-left: 0;border-right: 0;border-top: 0;">
         <p style="font-size: 1.5vw; color: white;text-align: center;">ASSIGNMENTS</p>
         <div class="assignments">
-            <div class="a1 assi"></div>
-            <div class="a2 assi"></div>
-            <div class="a3 assi"></div>
-            <div class="a4 assi"></div>
-            <div class="a5 assi"></div>
+            <div class="a1 assi"><a href="../../assignments/Assignment1/assignment_1.html" target="_blank"><img
+                        src="./a1.jpg" alt="" width="100%" height="100%"></a><span
+                    style="color: white;display: flex;justify-content: center;margin-top: 1vw;font-size: 1.5vw;">Assignment 1</span></div>
+            <div class="a2 assi"><a href="../../assignments/Assignment2/index.html" target="_blank"><img src="./a2.jpg"
+                        alt="" width="100%" height="100%"></a><span
+                        style="color: white;display: flex;justify-content: center;margin-top: 1vw;font-size: 1.5vw;">Assignment 2</span></div>
+            <div class="a3 assi"><a href="../../assignments/Assignment3/index.html" target="_blank"><img src="./a3.jpg"
+                        alt="" width="100%" height="100%"></a><span
+                        style="color: white;display: flex;justify-content: center;margin-top: 1vw;font-size: 1.5vw;">Assignment 3</span></div>
+            <div class="a4 assi"><a href="../../assignments/Assignment4/index.html" target="_blank"><img src="./a4.jpg"
+                        alt="" width="100%" height="100%"></a><span
+                        style="color: white;display: flex;justify-content: center;margin-top: 1vw;font-size: 1.5vw;">Assignment 4</span></div>
+            <div class="a5 assi"><a href="../../assignments/Assignment5/index.html" target="_blank"><img src="./a5.jpg"
+                        alt="" width="100%" height="100%"></a><span
+                        style="color: white;display: flex;justify-content: center;margin-top: 1vw;font-size: 1.5vw;">Assignment 5</span></div>
         </div>
         <hr
             style="margin-top: 5vw; margin-bottom: 5vw;border-color: seagreen;border-left: 0;border-right: 0;border-top: 0;">
