--- a/assignments/Assignment6/index.html
+++ b/assignments/Assignment6/index.html
@@ -21,7 +21,7 @@
             <div class="months">
                 <label> Months: <span style="color: #f00;">*</span><br>
                     <select name="" id="months" required>
-                        <option value="Select Month" disabled selected>Select Month</option>
+                        <option value="Select Month" disabled selected hidden>Select Month</option>
                         <option value="january">January</option>
                         <option value="february">February</option>
                         <option value="march">March</option>
