--- a/Practice/index.html
+++ b/Practice/index.html
@@ -53,6 +53,16 @@
                     style="width: 200px;height: 200px;max-width:100%;"></a>
             <P style="text-align: center;color: honeydew;">LESSON 5</P>
         </div>
+        <div>
+            <a href="./WE MIDS/WE-form practice/index.html"> <img src="https://freesvg.org/img/blankYellowFolder.png" alt="folder icon"
+                    style="width: 200px;height: 200px;max-width:100%;"></a>
+            <P style="text-align: center;color: honeydew;">Form practice</P>
+        </div>
+        <div>
+            <a href="./WE MIDS/WE-table practice/index.html"> <img src="https://freesvg.org/img/blankYellowFolder.png" alt="folder icon"
+                    style="width: 200px;height: 200px;max-width:100%;"></a>
+            <P style="text-align: center;color: honeydew;">Table Practice</P>
+        </div>
     </div>
 </body>
 
