--- a/assignments/index.html
+++ b/assignments/index.html
@@ -56,6 +56,11 @@
                     alt="folder icon" style="width: 200px;height: 200px;max-width:100%;"></a>
             <P style="text-align: center;color: honeydew;">ASSIGNMENT 6</P>
         </div>
+        <div>
+            <a href="./Assignment7/index.html"> <img src="https://freesvg.org/img/blankYellowFolder.png"
+                    alt="folder icon" style="width: 200px;height: 200px;max-width:100%;"></a>
+            <P style="text-align: center;color: honeydew;">ASSIGNMENT 6</P>
+        </div>
     </div>
     </div>
 </body>
