--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -15,6 +15,11 @@
     <div class="top">
       <div class="navbar">
         <div class="logo"><span>The Welcome Mat</span></div>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
         <div class="components">
           <ul>
             <li><a href="./index.html">Home</a></li>
