--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -15,11 +15,15 @@
     <div class="top">
       <div class="navbar">
         <div class="logo"><span>The Welcome Mat</span></div>
-        <a href="#" class="toggle-button">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </a>
+        <input type="checkbox" id="check">
+        <label for="check">
+          <span  class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </span>
+        </label>
+    
         <div class="components">
           <ul>
             <li><a href="./index.html">Home</a></li>
