--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -177,32 +177,49 @@
         </form>
       </div>
     </div>
-    <div class="footer" id="foot">
-      <div class="left">
-          <p style="color: white;font-size: 2.5vw;">Contact Me</p>
-          <p style="color: white; font-size: 1.5vw;"><a href="mailto:saleemabdullah764@gmail.com"target="_blank"><i class="bi bi-envelope-fill"
+    <div class="footer" id="foot" style="padding: 0%;margin: 0%;">
+      <div class="left" style="padding: 0%;margin: 0%;">
+          <p style="color: white;font-size: 2.5vw;">Contact us</p>
+          <p style="color: white; font-size: 1.5vw;"><a href="contact@welcomemat.com"target="_blank"  style="text-decoration: none;"><i class="bi bi-envelope-fill"
                       onmouseover="this.style.color='#FBBC05'"
                       onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
                       onmouseover="this.style.color='#FBBC05'"
-                      onmouseout="this.style.color=' #fff'">saleemabdullah764@gmail.com</span></a></p>
-          <p style="color: white;font-size: 1.5vw; "><a href="tel:+923092680015" target="_blank"><i class="bi bi-telephone-fill"
+                      onmouseout="this.style.color=' #fff'">contact@welcomemat.com</span></a></p>
+          <p style="color: white;font-size: 1.5vw;"><a href="tel: +62 21 123 4321" target="_blank" style="text-decoration: none;"><i class="bi bi-telephone-fill"
                       onmouseover="this.style.color='#34A853'"
                       onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
                       onmouseover="this.style.color='#34A853'"
-                      onmouseout="this.style.color=' #fff'">+923092680015</span></a></p>
+                      onmouseout="this.style.color=' #fff'">+62 21 123 4321</span></a></p>
       </div>
-      <div class="right">
+      <div class="mid">
+        <ul style="text-decoration: none;list-style: none;">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="">Rooms</a></li>
+          <li><a href="">Facalities</a></li>
+          <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
+        </ul>
+      </div>
+      <!-- <div class="newsletter">
+        <p style="text-align: center;color: white;font-weight: 500;">Keep Yourself Updated</p>
+        <form action="/">
+          <label for="email"></label>
+          <input type="email" name="email" id="email" placeholder="Subscribe To Our Newsletter" style="width: 100%;height: 2rem;"><br>
+          <input type="button" value="Subscribe" style="font-size: 1.2vw; background-color: #a55333; border: 1px solid #a55333; color: #fff; height: 4vw; width: 105%; border-radius: 0.3vw; margin-top: 9px;">
+        </form>
+      </div> -->
+      <div class="right" style="padding: 0%;margin: 0%;">
           <ul>
-              <li style="color: white;font-size: 2.5vw;">Follow me :)</li><br>
+              <li style="color: white;font-size: 2.5vw;">Follow us </li><br>
               <li><a href="https://www.instagram.com/abdullah.__.saleem" target="_blank"><i class="bi bi-instagram"
                           style="color: white;font-size: 2.5vw;" onmouseover="this.style.color='#cd486b'"
                           onmouseout="this.style.color=' #fff'"></i></a></li>
               <li><a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook" style="color: white; font-size: 2.5vw;"
                           onmouseover="this.style.color='#3b5998'" onmouseout="this.style.color=' #fff'"></i></a></li>
-              <li><a href="https://www.github.com/ABDULLAH-SALEEM" target="_blank"><i class="bi bi-github" style="color: white;font-size: 2.5vw;"
-                          onmouseover="this.style.color='#AD5C51'" onmouseout="this.style.color=' #fff'"></i></a></li>
           </ul>
       </div>
+  </div>
+  <div class="footerBottom" style="width: 100%;background-color: #301408;padding: 0px;margin: 0px; display: inline-block;">
+    <p style="text-align: center;color: white;font-size: 1.5vw;">Copyright &copy; 2021 THE WELCOME MAT. All Rights Reserved.</p>
   </div>
 </body>
 
