--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -177,6 +177,14 @@
         </form>
       </div>
     </div>
+    <div class="newsletter" style="display: flex;text-align: center;flex-direction: column; background-color:#3a1f14 ; padding: 0%;margin: 0%;border: none;">
+      <p style="text-align: center;color: #ffffff;font-weight: 500; font-size: 2vw;">Keep Yourself Updated</p>
+      <form action="/">
+        <label for="email"></label>
+        <input type="email" name="email" id="email" placeholder="Subscribe To Our Newsletter" style="width: 60%;height: 3vw;outline: none;border: none; font-size: 1.5vw;"><br>
+        <input type="button" value="Subscribe" style="font-size: 2vw; background-color: #a55333; border: 1px solid #a55333; color: #fff; height: 4vw; width: 60.5%; border-radius: 0.3vw; margin-top: 9px;">
+      </form>
+    </div>
     <div class="footer" id="foot" style="padding: 0%;margin: 0%;">
       <div class="left" style="padding: 0%;margin: 0%;">
           <p style="color: white;font-size: 2.5vw;">Contact us</p>
