--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -140,7 +140,7 @@
         </div>
       </div>
     </div>
-    <div class="mid4">
+    <!-- <div class="mid4">
       <div class="mid4-1">
         <p style="font-size: 2rem;color:#a55333;text-align: center;">Book A Room</p>
         <img src="./images/slider/jorg-angeli-1tyuLfDOnG0-unsplash.jpg" style="width: 100%;" alt="">
@@ -148,12 +148,12 @@
       <div class="mid4-2">
         <form action="">
           <label>
-            <!-- <input type="date" value="Check-In" id="Check-in"> -->
+            
             <input type="text" placeholder="Check-In" id="Check-in"
                     onfocus="(this.type='date')">
           </label><br><br>
           <label>
-            <!-- <input type="date" placeholder="Check-Out" id="Check-out"> -->
+            
             <input type="text" placeholder="Check-Out" id="Check-out"
             onfocus="(this.type='date')">
           </label><br><br>
@@ -175,9 +175,9 @@
           </label><br><br>
           <a href=""><button id="c-a">Check Availability</button></a>
         </form>
-      </div>
+      </div> -->
     </div>
-    <div class="newsletter" style="display: flex;text-align: center;flex-direction: column; background-color:#3a1f14 ; padding: 0%;margin: 0%;border: none;">
+    <div class="newsletter" style="display:flex;text-align: center;flex-direction: column; background-color:#3a1f14 ; padding: 0%;margin: 0%;border: none;">
       <p style="text-align: center;color: #ffffff;font-weight: 500; font-size: 2vw;">Keep Yourself Updated</p>
       <form action="/">
         <label for="email"></label>
@@ -186,7 +186,7 @@
       </form>
     </div>
     <div class="footer" id="foot" style="padding: 0%;margin: 0%;">
-      <div class="left" style="padding: 0%;margin: 0%;">
+      <div class="left" style="padding: 0%;margin: 0%; border: none;">
           <p style="color: white;font-size: 2.5vw;">Contact us</p>
           <p style="color: white; font-size: 1.5vw;"><a href="contact@welcomemat.com"target="_blank"  style="text-decoration: none;"><i class="bi bi-envelope-fill"
                       onmouseover="this.style.color='#FBBC05'"
