--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -185,7 +185,7 @@
         <input type="button" value="Subscribe" style="font-size: 2vw; background-color: #a55333; border: 1px solid #a55333; color: #fff; height: 4vw; width: 60.5%; border-radius: 0.3vw; margin-top: 9px;">
       </form>
     </div>
-    <div class="footer" id="foot" style="padding: 0%;margin: 0%;">
+    <div class="footer" id="foot">
       <div class="left" style="padding: 0%;margin: 0%; border: none;">
           <p style="color: white;font-size: 2.5vw;">Contact us</p>
           <p style="color: white; font-size: 1.5vw;"><a href="contact@welcomemat.com"target="_blank"  style="text-decoration: none;"><i class="bi bi-envelope-fill"
@@ -226,7 +226,7 @@
           </ul>
       </div>
   </div>
-  <div class="footerBottom" style="width: 100%;background-color: #301408;padding: 0px;margin: 0px; display: inline-block;">
+  <div class="footerBottom" style="display:flex;text-align: center;flex-direction: column; background-color:#301408 ; padding: 0%;margin: 0%;border: none;"">
     <p style="text-align: center;color: white;font-size: 1.5vw;">Copyright &copy; 2021 THE WELCOME MAT. All Rights Reserved.</p>
   </div>
 </body>
