--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -226,7 +226,7 @@
           </ul>
       </div>
   </div>
-  <div class="footerBottom" style="display:flex;text-align: center;flex-direction: column; background-color:#301408 ; padding: 0%;margin: 0%;border: none;"">
+  <div class="footerBottom" style="display:flex;text-align: center;flex-direction: column; background-color:#301408 ; padding: 0%;margin: 0%;border: none;">
     <p style="text-align: center;color: white;font-size: 1.5vw;">Copyright &copy; 2021 THE WELCOME MAT. All Rights Reserved.</p>
   </div>
 </body>
